Add possibility to stop spanning processes and intents